--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 MONGO_URI = 'mongodb://localhost/videoconf'
+MONGO_URI_WEB = mongodb://admin:paletizado19@ds147207.mlab.com:47207/meetings
 MONGO_USER = admin
 MONGO_PWD = paletizado
 
